--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,7 @@ main {
 
 .credits {
   /* TODO: I feel like there's a better way of setting margins / overriding gap */
-  margin-top: -1.5em;
+  margin-top: -2em;
   margin-bottom: -3em;
   font-size: 0.7rem;
   color: var(--text-secondary);
